--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -8,31 +8,40 @@
 #a{
 	color:red;
 }
+
+.top {
+	width: 100%;
+	height: 2%;
+	margin: 0px;
+	padding:0px;
+	background-color: red;
+}
+
 .left{
 	width:24%;
-	/* border:1px solid black; */
 	float:left;
+	/* border:1px solid black; */
 }
 .middle{
 	width:50%;
-/* 	border:1px solid black; */
-	float:left;
+	margin: auto;
+	/* 	border:1px solid black; */
 }
 .right{
 	width:24%;
-	/* border:1px solid black; */
 	float:left;
+	/* border:1px solid black; */
 }
 
 .newPostContainer{
-		border:1px solid blue;
-		border-radius:20px;	
-		margin: 5px;
-		padding:20px;
+	border:1px solid blue;
+	border-radius:20px;	
+	margin: 5px;
+	padding:20px;
 	
 }
+
 .listPostContainer{
-/* 	border:1px solid red; */
 	margin: 5px;
 }
 
@@ -42,28 +51,19 @@
 }
 
 .commentcontainer{
-	
-/* 	border:1px solid blue; */
-/* border-top:    1px solid  #A9BCF5; */
-border-bottom: 1px dotted #A9BCF5;
-
+	border-bottom: 1px dotted #A9BCF5;
 	margin-left: 30px;
-	
 }
-
-/* .commentEditClass{
-	display: none;
-} */
 
 .position{
 	 text-align: right;
 }
 
 #mainContent{
-		/* border:1px solid blue; */
-		margin:auto;
-		overflow:auto;
-		width:90%;
+	/* border:1px solid blue; */
+	margin:auto;
+	overflow:auto;
+	width:90%;
 }
 
 #loginBox{
@@ -75,9 +75,11 @@ border-bottom: 1px dotted #A9BCF5;
 	padding:0;
 	text-align:right;
 }
+
 .in{
-padding:2px;
+	padding:2px;
 }
+
 #logtable{
 	display:inline-block;
 	float:right;
@@ -85,23 +87,29 @@ padding:2px;
 }
 
 #registerBox{
-width:50%;
-float:right;
-border:1px solid green;
-border-radius:20px;	
-clear:right;
-margin:20px;
-padding:20px;
+	width:50%;
+	float:right;
+	border:1px solid green;
+	border-radius:20px;	
+	clear:right;
+	margin:20px;
+	padding:20px;
 }
 
 .space{
 	width:100%;
 }
+
 .effect{
 	 font-weight: bold;
 }
 
-.err{
-	
+.err{	
 	color:red;
 }
+
+.midDiv {
+	text-align: center;
+}
+
+textarea { resize:vertical; }
